--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description: > # this means to ignore newlines until "baseurl:"
   New Site
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://fluxoterra.github.io" # the base hostname & protocol for your site
-copyright: 2016 Whatever Company, Inc. All Rights Reserved.
+copyright: Site feito com ♥
 
 # Build settings
 markdown: kramdown
