--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ snapwidget: 600499
 
 # Contacts
 email: fluxoterra@gmail.com
-phone:
+phone: https://bit.ly/2A0RM45
 
 # Tracking
 googleAnalitycsID: UA-83933844-1
